--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -22,4 +22,4 @@ jobs:
         script: |
           cd demo_devops
           git pull origin master
-          java master.java
+          java Main.java
