--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             cd demo_devops
-            git pull origin main
+            git pull origin master
             ./start_app.sh
